--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,9 +1,34 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 
-body{
-    background: rgb(234, 56, 56);
+
+.container{
+    background: rgb(6, 6, 176);
+    margin: auto 200px;
+}
+
+.download{
+   
+    box-shadow: 0 2px 4px black;
+   
+}
+
+
+
+.search{    
+   
+    margin: 20px;
+
+   
+}
+
+form{
+    width: 500px;
+   border: solid black;
+   margin: 10px;
+   height: 100px;
 }
