--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,20 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
-    <h1>Bienvenus sur le site de partage des document </h1>
     
+    <div class="container">
+        <div class="download">
+            <div class="search">
+                <form action="get">
+                    <div class="input">
+                        <input type="search" placeholder="search">
+                    </div>
+                </form>
+            </div>
+            <div class="doc"></div>
+
+        </div>
+    </div>
+   
 </body>
 </html>
