--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -29,3 +29,49 @@ form{
    margin: 10px;
    height: 100px;
 }
+
+.doc{
+    display: flex;
+    margin: 20px;
+}
+
+.doc p{
+    margin-left: 20px;
+    display: flex;
+}
+.p{
+    width: 200px;
+    font-size: 20px;
+    background: #0eaad98b;
+    padding: 10px;
+    border-radius: 15px;
+}
+
+.s{
+    width: 150px;
+    font-size: 20px;
+    background: rgb(178, 12, 87);
+    padding: 10px;
+    border-radius: 15px;
+}
+.upload{
+    margin: 200px auto;
+    box-shadow: 0px 0px 5px 1px blue;
+    border-radius: 10px;
+    width: 600px;
+}
+
+a{
+    margin-left: 20px;
+    text-decoration: none;
+    padding: 10px;
+    color: white;
+    background:rgba(222, 12, 12, 0.56) ;
+    border-radius: 15px;
+    transition: background 0.5s ease-in-out;
+}
+
+a:hover{
+    background: red;
+    transition: background 0.5s ease-in-out;
+}
