--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -66,12 +66,39 @@ a{
     text-decoration: none;
     padding: 10px;
     color: white;
-    background:rgba(222, 12, 12, 0.56) ;
+    background:rgba(0, 0, 0, 0.902) ;
     border-radius: 15px;
     transition: background 0.5s ease-in-out;
 }
 
 a:hover{
-    background: red;
+    background: rgba(22, 4, 4, 0.359);
     transition: background 0.5s ease-in-out;
+}
+
+
+@media only screen and (max-width:650px){
+   
+    .upload{
+        width: 95%;
+    }
+    .s{
+        font-size: 15px;
+    }
+    .p{
+        font-size: 15px;
+    }
+    .doc p{
+        margin-left: 10px;
+    }
+
+    .doc{
+        margin: 10px;
+    }
+}
+
+@media only screen and (max-width:500px){
+    a{
+        font-size: 15px;
+    }
 }
