--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -6,30 +6,50 @@
 }
 
 
+/*-----------------------home page -------------*/
 
 
 .download{
    
-    color: aqua;
+    
    
 }
 
-
+.input{
+    display: grid;
+    margin: 20px;
+}
 
 .search{    
    
     margin: 20px;
 
-   
+}
+
+input, button{
+    padding: 5px;
+    outline: none;
+    font-size: 25px;
+    border-radius: 20px;
+    border: 1px solid  rgba(255, 0, 153, 0.419);
+    margin: 15px;
+    text-align: center;
+}
+
+button{
+    background: rgb(178, 12, 87);
+    color: white;
 }
 
 form{
     width: 500px;
-   border: solid black;
+   box-shadow: 0px 0px 2px 2px  rgba(226, 24, 166, 0.571);
    margin: 10px;
-   height: 100px;
+   border-radius: 10px;
 }
 
+
+/*-------------and home page*/
 .doc{
     display: flex;
     margin: 20px;
