--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -12,7 +12,7 @@
 .download{
    
     
-   
+   margin: 20px;
 }
 
 .input{
@@ -48,8 +48,20 @@ form{
    border-radius: 10px;
 }
 
+@media only screen and (max-width:600px){
+    input, button{
+        font-size: 15px;
 
+    }
+    form{
+        width: 400px;
+        
+    }
+}
 /*-------------and home page*/
+.doc-container{
+    margin: 20px;
+}
 .doc{
     display: flex;
     margin: 20px;
