add the permission

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,11 +21,11 @@
 
                     <div class="input">
                         <label for="title">Titre</label>
-                        <input type="text" placeholder="text" name="title">
+                        <input type="text" placeholder="text" name="title" required>
                         <label for="semestre">Semestre</label>
-                        <input type="number" name="semestre">
+                        <input type="number" name="semestre" required>
                         <label for="upload_file">Fichier</label>
-                        <input type="file" id="upload_file" name="upload_file">
+                        <input type="file" id="upload_file" name="upload_file" required>
                         <button id="button">Envoyer</button>
                     </div>
                 </form>
