--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="website icon" type="png" href="{% static 'icon/book.png' %}" style="width: 90px;">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
