--- a/templates/image.html
+++ b/templates/image.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Senddoc</title>
     <link rel="stylesheet" href="{% static 'css/image.css' %}">
+    <link rel="stylesheet" href="/static/css/image.css">
+    
 </head>
 <body>
     <div class="container">
@@ -16,7 +18,6 @@
                 <input type="text" name="name" placeholder="username">
                 <label for="image">Image_File</label>
                 <input type="file" name="image" placeholder="image">
-                
                 <button>Envoyer</button>
             </form>
         </div>
