--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
                         <option value="gestion">GESTION</option>
                     </select>
                 </div>
-                <button>Rechercher</button>
+                <button id="searchButton">Rechercher</button>
             </form>
         </div>
         <!--__________________Fin Search____________________-->
@@ -95,5 +95,6 @@
         {% endif %}
         <!--_______________________Fin Content_________________________-->
     </div>
+  
 </body>
 </html>
