--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,14 +36,13 @@ body{
 .plaine{
     margin: 20px;
     display: grid;
-    grid-template-columns: auto 600px;
+    grid-template-columns:390px auto;
     grid-column-end: auto;
     border-radius: 20px;
-   
-    
+     
 }
+
 .plaine-image{
-    
     
     img{
         width: 100%;
