--- a/templates/index.html
+++ b/templates/index.html
@@ -66,8 +66,7 @@
         <!--__________________Fin Search____________________-->
         <!------------------Content---------------------------------->
          <div id="message" style="color: red; text-align: center; margin-bottom: 100px; font-weight: bold; font-size: 40px;"></div>
-        
-        <div class="content" id="results">
+        <div class="loader-content">
             <div class="loader">
                 <span style="--i:1"></span>
                 <span style="--i:2"></span>
@@ -90,6 +89,9 @@
                 <span style="--i:19"></span>
                 <span style="--i:20"></span>
             </div>
+        </div>
+        <div class="content" id="results">
+           
 
 
         </div>
