--- a/templates/index.html
+++ b/templates/index.html
@@ -66,40 +66,17 @@
         <!--__________________Fin Search____________________-->
         <!------------------Content---------------------------------->
          <div id="message" style="color: red; text-align: center; margin-bottom: 100px; font-weight: bold; font-size: 40px;"></div>
-        <div class="loader-content">
-            <div class="loader">
-                <span style="--i:1"></span>
-                <span style="--i:2"></span>
-                <span style="--i:3"></span>
-                <span style="--i:4"></span>
-                <span style="--i:5"></span>
-                <span style="--i:6"></span>
-                <span style="--i:7"></span>
-                <span style="--i:8"></span>
-                <span style="--i:9"></span>
-                <span style="--i:10"></span>
-                <span style="--i:11"></span>
-                <span style="--i:12"></span>
-                <span style="--i:13"></span>
-                <span style="--i:14"></span>
-                <span style="--i:15"></span>
-                <span style="--i:16"></span>
-                <span style="--i:17"></span>
-                <span style="--i:18"></span>
-                <span style="--i:19"></span>
-                <span style="--i:20"></span>
-            </div>
-        </div>
+       
         <div class="content" id="results">
            
-
+                {% for docs in results %}
+                <a href="{% url 'upload' docs.id %}" style=" display: block;"> {{docs.ue}}</a>
+                {% endfor %}
 
         </div>
        
         <!--_______________________Fin Content_________________________-->
     </div>
-   <script src="/static/js/script.js"> 
-         
-   </script>
+  
 </body>
 </html>
